--- a/Modl3_Joost_Stijn/Modl3_Joost_Stijn.csproj
+++ b/Modl3_Joost_Stijn/Modl3_Joost_Stijn.csproj
@@ -41,9 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Application.cs" />
+    <Compile Include="Model\Boat.cs" />
+    <Compile Include="Model\Cart.cs" />
+    <Compile Include="Model\Game.cs" />
+    <Compile Include="Model\Switch.cs" />
+    <Compile Include="Model\Tile.cs" />
+    <Compile Include="Model\Track.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\View.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
